--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Secret Site</title>
+    <title>Secret Static Site</title>
 </head>
 <body>
-    <h1>Welcome to My Secret Site</h1>
-    <p id="message">Loading...</p>
+    <h1>My Secret Message</h1>
+    <p id="secret-message"></p>
     <script src="config.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
