--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>API Key: <span id="api-key"></span></p>
 
     <script>
-        document.getElementById('api-key').textContent = '{{MY_SECRET}}';
+        document.getElementById('api-key').textContent = '{{APP_URL}}';
     </script>
 </body>
 </html>
